# Courier-System

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
courier/: app.py  cli.py
courier/config/: cost.json  offers.json
courier/models/: __init__.py  delivery_service.py  offers.py  offers_config.py  products.py  vehicle.py
courier/utils/: __init__.py  console_decor.py  validators.py
examples/: sample1.json  sample2.json
tests/: test_products.py
tests/models/: test_delivery_service.py  test_orders.py  test_vehicles.py
tests/utils/: test_console_decor.py
