[tool.poetry]
name = "courier"
version = "0.1.0"
description = "Basic Courier Management system"
authors = ["Muthu Kumaran R <rsmuthu@duck.com>"]
readme = "README.md"

[tool.poetry.scripts]
courier = "courier.app:main"
courier-cli = "courier.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
inquirer = "^2.10.0"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"

[tool.black]
line-length = 100
target-version = ['py310']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
